<resources>
    <string name="app_name">Housie</string>


    <string name="facebook_app_id">659512657531017</string>
    <string name="submit">Tiếp tục</string>
    <string name="email">Email</string>
    <string name="termAndPolicy">Điều khoản sử dụng và chính sách riêng tư</string>
    <string name="login">Đăng nhập</string>
    <string name="forgotPassword">Quên mật khẩu?</string>
    <string name="password">Mật khẩu</string>
    <string name="enterYourPassword">Chào mừng trở lại\nHãy nhập mật khẩu của bạn</string>
    <string name="createYourPassword">Xin chào\nHãy tạo mật khẩu của bạn</string>
    <string name="orLoginWith">Hoặc đăng nhập với</string>
    <string name="errorLogin">Đã có lỗi trong quá trình đăng nhập, xin thử lại.</string>
    <string name="emailCannotBeNull">Email không thể để trống</string>
    <string name="emailIsNotValid">Email không hợp lệ</string>
    <string name="setting">Cài đặt</string>
    <string name="districtStreet">Quận/huyện, phố…</string>
    <string name="filter">Lọc</string>
    <string name="searchAddress">Tìm kiếm địa chỉ…</string>
    <string name="listResult">Danh sách</string>
    <string name="localInfo">Thông tin</string>
    <string name="saveSearch">Lưu tìm kiếm</string>
    <string name="close">Đóng</string>
    <string name="pleaseCheckYourConnection">Hãy kiểm tra lại kết nối Internet</string>
    <string name="pleaseEnableLocationService">Hãy kích hoạt dịch vụ vị trí.</string>
    <string name="localInfoDialog">Thông tin về khu vực</string>
    <string name="satellite">Chế độ vệ tinh</string>
    <string name="schools">Trường học</string>
    <string name="noInternetConnection">Không có kết nối internet</string>
    <string name="currency">VNĐ</string>
    <string name="errorConnection">Đã có lỗi trong quá trình kêt nối, xin thử lại</string>
    <string name="selectBoard">Chọn nhóm</string>
    <string name="seeAll">"Xem tất cả "</string>
    <string name="boards">Nhóm</string>
    <string name="homes">Nhà</string>
    <string name="searches">Các tìm kiếm</string>
    <string name="hospitals">Bệnh viện</string>
    <string name="houses">" ngôi nhà"</string>
    <string name="loginOrRegister">Đăng nhập hoặc\n đăng ký một tài khoản</string>
    <string name="register">Đăng ký</string>
    <string name="cancel">Hủy</string>
    <string name="reset">Đặt lại</string>
    <string name="search">Tìm kiếm</string>
    <string name="priceRange">Tầm giá</string>
    <string name="forSale">Bán</string>
    <string name="forRent">Cho thuê</string>
    <string name="numberOfRooms">Số phòng</string>
    <string name="any">Bất kỳ</string>
    <string name="area">Diện tích</string>
    <string name="pleaseInputPassword">Hãy nhập mật khẩu của bạn</string>
    <string name="passwordNotValid">Mật khẩu không hợp lệ</string>
    <string name="next">Tiếp theo</string>
    <string name="createBoard">Tạo nhóm</string>
    <string name="boardName">Tên nhóm</string>
    <string name="pleaseInputNameBoard">Hãy nhập tên nhóm bạn muốn tạo</string>
    <string name="nameBoardAtLeast3">Tên nhóm phải dài hơn 3 ký tự</string>
    <string name="boardHasExisted">Nhóm đã tồn tại</string>
    <string name="boardCreated">Nhóm đã được tạo</string>
    <string name="loginSuccess">Đăng nhập thành công</string>
    <string name="registerSuccess">Đăng ký thành công</string>
    <string name="getOnBoard">Tạo lập các nhóm</string>
    <string name="contentNoBoards">Phân nhóm những ngôi nhà bạn thích vào các nhóm để có thể dễ dàng theo dõi chúng</string>
    <string name="startedByCreatingABoard">Hãy bắt đầu bằng việc tạo một nhóm!</string>
    <string name="searchForHomes">Danh sách nhà quan tâm</string>
    <string name="contentNoHouses">Bạn chưa thêm một ngôi nhà nào vào danh sách yêu thích. Bắt đầu tìm kiếm ngay!</string>
    <string name="logout">Thoát</string>
    <string name="line">-</string>
    <string name="onePlus">1+</string>
    <string name="twoPlus">2+</string>
    <string name="threePlus">3+</string>
    <string name="fourPlus">4+</string>
    <string name="savedSearches">Nhũng tìm kiếm đã lưu</string>
    <string name="contentNoSearch">Bạn chưa lưu bất kỳ tìm kiếm nào. Lưu tiêu chuẩn tìm kiếm của bạn để dễ dàng truy cập sau này.</string>
    <string name="like">Thích</string>
    <string name="share">Chia sẻ</string>
    <string name="direction">Chỉ đường</string>
    <string name="mapView">Map view</string>
    <string name="earthView">Earth view</string>
    <string name="intro">Giới thiệu</string>
    <string name="seeMore">Đọc thêm</string>
    <string name="info">Thông tin</string>
    <string name="status">Tình trạng</string>
    <string name="price">Giá</string>
    <string name="numberOfRoom">Số phòng</string>
    <string name="priceOverArea">Giá/diện tích</string>
    <string name="propertyType">Hình thức bất động sản</string>
    <string name="addedOnHousie">Đăng trên Housie</string>
    <string name="address">Địa chỉ</string>
    <string name="contact">Thông tin liên hệ</string>
    <string name="call">Gọi</string>
    <string name="agent">Nhân viên môi giới</string>
    <string name="owner">Người đăng tin</string>
    <string name="seeLess">Ẩn bớt</string>
    <string name="defaultNameAgent">Hoa Anh Tú</string>
    <string name="defaultPhone">0942899531</string>
    <string name="requestInfo">Yêu cầu thông tin</string>
    <string name="mapnNearBy">Chế độ bản đồ</string>
    <string name="photo">ảnh</string>
    <string name="defaultPhoneAgent">0942899531</string>
    <string name="selectAppToSend">Chọn ứng dụng để gửi</string>
    <string name="noAppToSend">There are no email clients installed.</string>
    <string name="messageToTheOwner">Email gửi đến người đăng tin</string>
    <string name="pleaseInputEmailContent">Hãy nhập nội dung email bạn muốn gửi</string>
    <string name="subject">Thư ngỏ</string>
    <string name="iAmInterestingEmail">"Tôi rất muốn biết thêm thông tin về ngôi nhà "</string>
    <string name="room">phòng</string>
    <string name="errorProcessing">Đã có lỗi trong quá trình xử lý, xin thử lại.</string>
    <string name="homeSaved">Nhà đã được lưu</string>
    <string name="contentEmail">Nội dung email</string>
    <string name="noHouses">Không có nhà nào trong khu vực này</string>
    <string name="image">Ảnh</string>
    <string name="post">Đăng tin</string>
    <string name="description">Mô tả</string>
    <string name="imageSelected">" ảnh đã được chọn"</string>
    <string name="YES">Chọn</string>
    <string name="processing">Đang xử lý…</string>
    <string name="rename">Đổi tên</string>
    <string name="newNameForBoard">Nhập tên mới cho nhóm</string>
    <string name="OK">OK</string>
    <string name="pleaseInputNewName">Hãy nhập tên nhóm mới</string>
    <string name="postANewHouse">Đăng thông tin nhà</string>
    <string name="postSuccessfully">Đăng thông tin thành công</string>
    <string name="pleaseInputInfo">Hãy nhập đầy đủ thông tin</string>
    <string name="accountInfo">Thông tin tài khoản</string>
    <string name="yourPost">Nhà bạn đã đăng</string>
    <string name="edit">Sửa</string>
    <string name="save">Lưu</string>
    <string name="name">Tên</string>
    <string name="accountType">Loại tài khoản</string>
    <string name="phoneNumber">Điện thoại liên hệ</string>
    <string name="receiveNoti">Nhận thông báo</string>
    <string name="update">Cập nhật</string>
    <string name="housieAccount">Tài khoản Housie</string>
    <string name="updateSuccessfully">Đã cập nhật thông tin</string>
    <string name="emailHasBeenRegisteredHousieAccount">Bạn đã sử dụng email này để đăng ký tài khoản Housie</string>
    <string name="updateInfo">Cập nhật hồ sơ</string>
    <string name="confirmToFinish">Mọi thay đổi của bạn đều sẽ không được lưu, bạn có muốn kết thúc</string>
    <string name="yourProfile">Hồ sơ của bạn</string>
    <string name="are_you_sure_to_log_out">Bạn có chắc chắn muốn thoát?</string>
    <string name="logoutSuccessfully">Đăng xuất thành công</string>
    <string name="createBoardSuccesfully">Tạo nhóm thành công</string>
    <string name="noResult">Không có kết quả nào</string>
    <string name="privateHouse">Nhà riêng</string>
    <string name="shop">Cửa hàng</string>
    <string name="condominium">Chung cư</string>
    <string name="warehouse">Kho, nhà xưởng</string>
    <string name="resort">Khu nghỉ dưỡng</string>
    <string name="land">Đất nền</string>
    <string name="removeSuccessfully">Xóa tìm kiếm thành công</string>
    <string name="confirmSaveSearch">Bạn có muốn lưu tìm kiếm này?</string>
    <string name="saveSearchSuccessfully">Lưu tìm kiếm thành công</string>
    <string name="newHomeMatches">Nhà mới phù hợp</string>
    <string name="newHome">Một ngôi nhà vừa đăng phù hợp với tìm kiếm của bạn</string>
    <string name="homeUnsaved">Nhà đã được xóa</string>
    <string name="result">Kết quả</string>
    <string name="park">Công viên</string>
    <string name="bank">Ngân hàng</string>
    <string name="restaurant">Nhà hàng</string>
    <string name="detailAddress">Địa chỉ chi tiết</string>
    <string name="postHouse">Đăng nhà</string>
    <string name="pleaseInputRightAddress">Hãy nhập chính xác địa chỉ</string>
    <string name="noInternetConnectionRetry">Không có kết nối internet\nChạm để thử lại</string>

</resources>
