<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioSale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/forSale" />

            <RadioButton
                android:id="@+id/radioRent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forRent" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/priceRange"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerPriceFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/price_range_from_sale" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/line" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerPriceTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/price_range_to_sale" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/numberOfRooms"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                android:id="@+id/tvRoomAny"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_number_room_selected"
                android:gravity="center"
                android:text="@string/any"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvRoom1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_number_room"
                android:gravity="center"
                android:text="@string/onePlus"
                android:textColor="@color/colorDarkGray" />

            <TextView
                android:id="@+id/tvRoom2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_number_room"
                android:gravity="center"
                android:text="@string/twoPlus"
                android:textColor="@color/colorDarkGray" />

            <TextView
                android:id="@+id/tvRoom3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_number_room"
                android:gravity="center"
                android:text="@string/threePlus"
                android:textColor="@color/colorDarkGray" />

            <TextView
                android:id="@+id/tvRoom4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_number_room"
                android:gravity="center"
                android:text="@string/fourPlus"
                android:textColor="@color/colorDarkGray" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="18dp"
            android:text="@string/area"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerAreaFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/area_from" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/line" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerAreaTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/area_to" />
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:background="@color/colorDarkGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/tvCancel"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_tv_search"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGray" />

        <TextView
            android:id="@+id/tvReset"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_tv_search"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGray" />

        <TextView
            android:id="@+id/tvSearch"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_tv_search"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/search"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>