<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_activity"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="@dimen/paddingActivityLogin"
    android:paddingStart="@dimen/paddingActivityLogin">


    <EditText
        android:id="@+id/etID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorGray"
        android:theme="@style/Theme.App.Base" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_submit"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orLoginWith"
            android:textColor="@android:color/white" />

        <FrameLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnLoginFacebook"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/imbFacebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_button_facebook"
                android:src="@drawable/ic_facebook" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/imbGoogle"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/background_button_google"
            android:elevation="4dp"
            android:src="@drawable/ic_google"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/termAndPolicy"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/progress_bar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>